# PrincesssGardenServer

./: CMakeLists.txt  README.md
sql/: PlantInit.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp
src/controller/: MyController.cpp  MyController.h
src/db/: PlantDb.hpp
src/dto/: DTOs.hpp
src/service/: PlantService.cpp  PlantService.h
